# ros

./: Cargo.toml  run.sh  x86_64-ros.json
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  qemu.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs
