[package]
name = "ros"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ros"
test = true
bench = false

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
x86_64 = "0.14.2"
spin = "0.10.0"
volatile = "0.2.6"
uart_16550 = "0.4.0"

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial", "stdio",
	"-display", "none"
]
#run-args = ["-cpu", "host", "-serial", "stdio"]
test-success-exit-code = 33
test-timeout = 30